--- a/todo
+++ b/todo
@@ -22,24 +22,28 @@ action -> purpure
 13 improve Probe.move with variable precision
 14 allow ping to disable echo(questionable)
 15 make main settings are joint element (icon + title are all clickable)
-16 ajust color for overlay
-17 refactor js socket
 18 reduce session sid size
-19 fix wssocket bug, when server close session it looks like open connection(101) and immediately close it(1006)
-    it produce problem on client and break socket opening flow, when socket unable to close immediately after open
-    as it already resolve, and then fail only after authorize task fail due to timeout. That produce delay big enough to
-    reconnect attempt fail due to already existing connectTask (as it not cleaned itself yet)
-20 report bug getpeername&getsockname do not report valid size if used with invalid buffer size
 21 report/notreport mbedtls_base64_encode have buffer like interface but behave like c-string processing function
     it want buffer of size (n+1) (probably for nil) and return error if buffer is (n) but it use only (n) bytes and return size of writed bytes as (n)
     mbedtls_base64_encode have 4 bytes align and requirements for (x*4)+1 buffer size is little unexpected.
+23 add compile time size for resource (compressed)
+24 move from global packet counter to session based
+27 globaly ctrl object move to overship semantic it seems "variable must be valid until sent" is refer to http_sent not socket sent
 
-RC1 BUGS
+notes:
+dropped memory decompression iml
+unable to keep default stack size, no easy way
+unable to make file constexpr
+socket call must be also refactored
+file checksum will change on every build because it's how cmake file compress work
+
+BUGS
 1 move element to trash broke overlay aligment
 2 chrome57 fix worker startup crash(missing feature)
 3 change submit btn decouple size of button and line-height, set line-height = 2.5rem
 4 check that when multipixel line in use border clip work correctly, most likely it is not.
 5 check widget head at higth dpi
+6 DHCP may fail after return success
 
 
 
